<resources>
    <string name="app_name">ShowCase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="all_users">All Users</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_to_showcase_n_get_friends_and_notifications">Welcome to ShowCase   Get Friends and Notifications</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="name">name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logout_of_this_account">Logout of this Account</string>
    <string name="username">Username</string>
    <string name="enter_notification_to_send"> Enter message to send…</string>
    <string name="default_notification_channel_id">SHOW_CASE_FRIENDS_1</string>
</resources>
