<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context="com.job.showcase.MainActivity">


    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/profile"
            android:textColor="@color/textTabBright"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/all_users"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_semibold"
            android:padding="15dp"
            android:text="@string/notifications"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabsLayout">

    </android.support.v4.view.ViewPager>
</RelativeLayout>
