<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context="com.job.showcase.userManagement.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="Create a new Account" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_imageBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:src="@drawable/profile_placeholder"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_imageBtn"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_name"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColorHighlight="@color/textTabBright"
        android:textColorLink="@color/textTabBlue"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/nunito_semibold"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="Create a new account"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button_back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_new_account"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/nunito_semibold"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/back_to_login"
        android:textColor="@color/textTabBright"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
